@@ -1,0 +1,5 @@
+dist_bin_SCRIPTS = difxdbModule.py
+
+install-exec-hook:
+	mv $(DESTDIR)$(bindir)/difxdbModule.py $(DESTDIR)$(bindir)/difxdbModule
+
